--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "server": "node server.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx,ts,tsx",
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
+    "clsx": "^1.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^4.18.2",
+    "lucide-react": "^0.263.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "lucide-react": "^0.263.1",
-    "clsx": "^1.2.1",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
@@ -24,6 +31,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.2",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -43,4 +51,4 @@
   ],
   "author": "HubSpot Demo Team",
   "license": "MIT"
-} 
+}
